Tiny unit-display problem in constraint panels #39563

Closed
opened 2014-04-02 17:54:43 +02:00 by Gwenael Le Page · 6 comments

Hi, this is a very minor little glitch in the interface.

In some constraints (the "transformation" constraint and the same one for bones), whenever the units are set to metric or imperial and not "none", all the values use either "m" for meters or " ' " for inches, even angles.

That is kind of distracting at first.

I use Bender 2.70 2c00ecc from the 31st of march, but i don't think it plays a role

Hi, this is a very minor little glitch in the interface. In some constraints (the "transformation" constraint and the same one for bones), whenever the units are set to metric or imperial and not "none", all the values use either "m" for meters or " ' " for inches, even angles. That is kind of distracting at first. I use Bender 2.70 2c00ecc from the 31st of march, but i don't think it plays a role

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @gwentiv

Added subscriber: @gwentiv
Bastien Montagne self-assigned this 2014-04-07 09:19:59 +02:00

This issue was referenced by blender/blender-addons-contrib@8714ae09f8

This issue was referenced by blender/blender-addons-contrib@8714ae09f89426242ecd0c65f3291de1a2b51fc4

This issue was referenced by 8714ae09f8

This issue was referenced by 8714ae09f89426242ecd0c65f3291de1a2b51fc4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 8714ae09f8.

Closed by commit 8714ae09f8.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39563
No description provided.